# gol

./: CMakeLists.txt  main.cpp
gol/: CMakeLists.txt  StringFormatter.cpp  StringFormatter.hpp  mat.cpp  mat.hpp
